Corrected spacing

--- a/frontend/src/app/pages/landing/landing.component.scss
+++ b/frontend/src/app/pages/landing/landing.component.scss
@@ -112,5 +112,6 @@
 }
 
 .p-1 {
-  margin-top: -160px;
+  margin-top: -130px;
+  height: 1000px;
 }
